# backend/docs/swagger.json
@@ -250,6 +250,12 @@
                 "baseurl": {
                     "type": "string"
                 },
+                "libarys": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "token": {
                     "type": "string"
                 }
